# vap-showcase

./: Dockerfile  LICENSE  README.md  glama.json  mcp.json  pyproject.toml  server.json
.github/workflows/: ci-example.yml
api/: openapi.yaml
examples/: claude_desktop_config.json
mcp/: __init__.py  vap_mcp_proxy.py
sdk/: README.md
sdk/examples/: basic_usage.py
sdk/vape_client/: __init__.py  client.py  exceptions.py  models.py
