[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vap-mcp-server"
version = "1.12.6"
description = "MCP server for AI media generation (images, videos, music) with deterministic cost control"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "VAP", email = "support@vapagent.com" }
]
keywords = [
    "mcp",
    "ai",
    "media-generation",
    "image-generation",
    "video-generation",
    "music-generation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "httpx>=0.25.0"
]

[project.urls]
Homepage = "https://vapagent.com"
Documentation = "https://api.vapagent.com/docs"
Repository = "https://github.com/elestirelbilinc-sketch/vap-showcase"

[project.scripts]
vap-mcp = "mcp.vap_mcp_proxy:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp"]
